Fix mobile centering without clipping

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   grid-template-rows: 120px 1fr 90px;
   position: relative;
   z-index: 1;
-  margin: 0;
+  margin: 0 auto;
   background: #F8F8F8;
 }
 
